...
            android:textSize="120sp"
            android:textStyle="italic|bold"
            android:fontFamily="times"/>

        <!-- Username Input Box -->
        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:inputType="text"
...
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"/>

        <!-- Password Input Box -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
...
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"/>

        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32sp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/login"
...
